--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "clementinejs-fcc",
+  "name": "Request-header-parser",
   "version": "1.0.1",
-  "description": "The elegant and lightweight boilerplate for full stack JavaScript.",
+  "description": "Backend API project completed as part of FCC's curriculum",
   "main": "server.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/johnstonbl01/clementinejs-fcc"
   },
-  "homepage": "http://www.clementinejs.com/",
-  "bugs": "https://github.com/johnstonbl01/clementinejs-fcc/issues",
   "keywords": [
     "MongoDB",
     "Mongoose",
@@ -21,7 +19,7 @@
   "scripts": {
     "start": "node server.js"
   },
-  "author": "Blake Johnston",
+  "author": "Jeff Feng",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.6",
